web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-destructuring5/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export const [foo] = bar;
 |^
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (2,1)
2|export function foo() {};
 |^
[SyntaxError]: Identifier has already been declared. (2,8)
2|export function foo() {};
 |      ^
[SyntaxError]: Identifier has already been declared. (2,8)
2|export function foo() {};
 |      ^
